# phishing-url-detection

./: .coverage  .flake8  .gitignore  Makefile  README.md  Xtest.py  dag.md  dvc.yaml  index.html  index.js  metrics.json  modelcard.md  params.yaml  pyproject.toml  report.md  xtest.py  xtest2.py  xtest3.py
.dvc/: config
.github/workflows/: publish_model.yaml  run_test.yaml  train_model.yaml
conf/: config.yaml  path.yaml  pipeline.yaml
conf/calibration/: Isotonic.yaml  Sigmoid.yaml
conf/classifier/: AdaBoostClassifier.yaml  CatBoostClassifier.yaml  ExtraTreesClassifier.yaml  GaussianNB.yaml  GradientBoostingClassifier.yaml  KNeighborsClassifier.yaml  LGBMClassifier.yaml  LinearDiscriminantAnalysis.yaml  LinearSVC.yaml  Perceptron.yaml  QuadraticDiscriminantAnalysis.yaml  RandomForest.yaml  RidgeClassifier.yaml  TreeDecision.yaml  XGBoostClassifier.yaml
conf/estimator/: CatBoostClassifier.yaml  LinearSVC.yaml  LogisticRegression.yaml  Perceptron.yaml  QuadraticDiscriminantAnalysis.yaml  RandomForest.yaml  TreeDecisionClassifier.yaml  XGBClassifier.yaml
conf/feature_preprocessing/: Normalizer.yaml  StandardScalar.yaml
conf/feature_selection/: RecursiveFeatureElimination.yaml  SelectFromModel.yaml  SelectKBestAnova.yaml  SelectKBestChi2.yaml  SelectKBestMutualInfo.yaml  SequentialFeatureSelection.yaml  UnivariateFeatureSelection.yaml  VarianceThreshold.yaml
conf/target_preprocessing/: LabelEncoder.yaml
data/: .gitignore  data.csv.dvc  test.parquet.dvc  train.parquet.dvc
data/predicted/: test.csv  train.csv
data/raw/: test.csv  train.csv
data/selected/: test.csv  train.csv
data/test/: predicted.csv  transformed.csv
data/transformed/: test.csv  train.csv
dvc_plots/: index.html
dvclive/: metrics.json  params.yaml
dvclive/model/: model.pkl.dvc  params.yaml
dvclive/optunalog/: .gitignore  journal.log.dvc
dvclive/plots/metrics/: f1.tsv  (+18 more)
live/: hyperparams.yaml  metrics.json
live/model/: .gitignore  README.md
load_model/javascript/: README.md  index.html
load_model/python/: load_onnx.py
model/: .gitignore
notebooks/: compare.ipynb  correlation.ipynb  optimize.ipynb  test.ipynb
optunalog/: optuna.db
resources/modelcard/: template.md.j2
resources/templates/: report.md.j2
results/: .gitignore  feature_importance.yaml  metrics.yaml  selected_features.yaml
results/models/: README.md  label_encoder.pkl  model_card.md  preprocessor.pkl
results/reports/: cls_report.html
scripts/: all-exps.sh  compare_algo.py  compare_classifier.py  compare_classifiers.py  compare_models.py  create_model_card.py  create_modelcard.py  gridsearch.sh  model.py  optimize.py  optimize_model.py  optimize_params.py  optimize_xgboost.py  run_basic_models.sh  show.sh  show_best.sh  show_metrics.py  show_metrics.sh  tcompare.py  train_model.py
scripts/compare_models/: compare_models.py  compare_models.sh
scripts/load_model/: joblib_model.py  load_onnx.py  load_pickle.py  onnx_model.js  onnx_model.py
scripts/optimize_xgboost/: compare_feature_selection.py  compare_nb_of_features.py  random_search.py
src/: analyze_data.py  compare.py  create_onnx.py  evaluate.py  feature_importance.py  feature_importances.py  feature_selection.py  finalize_model.py  helper.py  model_card.py  model_interpretation.py  modelcard.py  optimize.py  pkl2onnx.py  plots.py  predict.py  preprocessing.py  report.py  report_cls.py  report_data.py  split_data.py  test_model.py  train.py  train_model copy.py  train_model.py
src/plots/: advantages.py  calibration_curve.py  confusion_matrix.py  correlation_matrix.py  cumulative_distribution.py  data.py  data_proportion.py  details.py  feature_importance.py  feature_importances.py  intended_use.py  limitations.py  metrics.py  metrics_table.py  model_card.py  precision_recall_curve.py  roc_curve.py  score_distribution.py
temp/: README.md  config.json
templates/: modelcard.md.j2
tests/: conftest.py  test_code.py  test_data.py  test_model.py
(+13 files in other folders)
