[tool.poetry]
name = "phishing-url-detection"
version = "0.1.0"
description = ""
authors = ["pirocheto"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
dvc = { extras = ["s3"], version = "^3.30.1" }
scikit-learn = "^1.3.2"
pandas = { extras = ["parquet"], version = "^2.1.3" }
skl2onnx = "^1.15.0"
jinja2 = "^3.1.2"
seaborn = "^0.13.0"
matplotlib = "^3.8.2"
# * Force scipy version for deepchecks which required scipy <= 1.10.1 
scipy = "<=1.10.1"
deepchecks = { extras = ["nlp"], version = "^0.17.5" }
onnxruntime = "^1.16.3"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.3"
coverage = "^7.3.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.pytest.ini_options]
pythonpath = ["src"]

[tool.coverage.run]
omit = ["plots.py"]

[tool.coverage.report]
exclude_also = ['if __name__ == "__main__":']
