[tool.poetry]
name = "phishing-url-detection"
version = "0.1.0"
description = ""
authors = ["pirocheto"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
dvc = { extras = ["s3"], version = "^3.30.1" }
scikit-learn = "^1.3.2"
skl2onnx = "^1.15.0"
jinja2 = "^3.1.2"
seaborn = "^0.13.0"
matplotlib = "^3.8.2"
pandas = { extras = ["parquet"], version = "^2.1.3" }
tabulate = "^0.9.0"

[tool.poetry.group.test.dependencies]
pytest = "^7.4.3"
onnxruntime = "^1.16.3"
pandas = { extras = ["parquet"], version = "^2.1.3" }
dvc = { extras = ["s3"], version = "^3.30.1" }
scikit-learn = "^1.3.2"

[tool.poetry.group.test]
optional = true

[tool.poetry.group.report.dependencies]
jinja2 = "^3.1.2"
tabulate = "^0.9.0"

[tool.poetry.group.report]
optional = true

[tool.poetry.group.experiment.dependencies]
xgboost = "^2.0.2"
lightgbm = "^4.1.0"

[tool.poetry.group.experiment]
optional = true

[tool.poetry.group.dev.dependencies]
xgboost = "^2.0.2"
lightgbm = "^4.1.0"
coverage = "^7.3.2"
black = "^23.11.0"
isort = "^5.12.0"
pylint = "^3.0.2"
flake8 = "^6.1.0"

[tool.poetry.group.dev]
optional = true

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
pythonpath = ["src"]

[tool.coverage.run]
omit = ["plots.py"]

[tool.coverage.report]
exclude_also = ['if __name__ == "__main__":']

[tool.pylint]
good-names = ["X_train", "X_test"]

[tool.pylint.MASTER]
ignore-patterns = ["test_.*?py"]

[tool.pylint.report]
ignore = ["tests"]
